<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_reply"
        android:icon="@drawable/ic_reply"
        android:title="@string/reply" />
    
    <item
        android:id="@+id/action_react"
        android:icon="@drawable/ic_add_reaction"
        android:title="@string/add_reaction" />
    
    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_copy"
        android:title="@string/copy" />
    
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit" />
    
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete" />
</menu>
